[gd_scene load_steps=2 format=3 uid="uid://6b8rn3kh3dxm"]

[ext_resource type="Script" path="res://inventory_ui.gd" id="1_gxek2"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gxek2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 100.0

[node name="Slot1" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot1"]
layout_mode = 2
offset_right = 96.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot1"]
layout_mode = 2
offset_right = 51.0
offset_bottom = 48.0

[node name="Slot2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot2"]
layout_mode = 2
offset_right = 97.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot2"]
layout_mode = 2
offset_right = 49.0
offset_bottom = 48.0

[node name="Slot3" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot3"]
layout_mode = 2
offset_right = 97.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot3"]
layout_mode = 2
offset_right = 47.0
offset_bottom = 48.0

[node name="Weapon" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Candles" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
